@@ -5,6 +5,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -20,7 +21,7 @@ class ResourceFolderListerTests {
         List<String> files = lister.listFiles("templates");
 
         assertEquals(
-                List.of("templates/a.txt", "templates/sub/b.txt", "templates/sub/deep/c.json"),
+                Arrays.asList("a.txt", "sub/b.txt", "sub/deep/c.json"),
                 files);
     }
 
@@ -29,13 +30,12 @@ class ResourceFolderListerTests {
         List<ResourceFolderLister.Entry> entries = lister.listEntries("templates");
 
         assertEquals(
-                List.of(
-                        new ResourceFolderLister.Entry("templates", true),
-                        new ResourceFolderLister.Entry("templates/a.txt", false),
-                        new ResourceFolderLister.Entry("templates/sub", true),
-                        new ResourceFolderLister.Entry("templates/sub/b.txt", false),
-                        new ResourceFolderLister.Entry("templates/sub/deep", true),
-                        new ResourceFolderLister.Entry("templates/sub/deep/c.json", false)),
+                Arrays.asList(
+                        new ResourceFolderLister.Entry("a.txt", false),
+                        new ResourceFolderLister.Entry("sub", true),
+                        new ResourceFolderLister.Entry("sub/b.txt", false),
+                        new ResourceFolderLister.Entry("sub/deep", true),
+                        new ResourceFolderLister.Entry("sub/deep/c.json", false)),
                 entries);
     }
 }
